Fix category navigation on mobile

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -139,7 +139,7 @@
       @include display-flex;
       @include flex-direction(column);
       position: fixed;
-      top: -357px;
+      top: -432px;
       width: 100%;
       padding: 0;
       height: auto;
